Update Database.java